--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   math_expressions: ^2.0.1
+  shared_preferences: ^2.2.0
+  provider: ^6.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -89,3 +91,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+
