--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   math_expressions: ^2.0.1
+  image_picker: ^1.0.7
+  permission_handler: ^11.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -89,3 +91,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
